Правка пути к svg

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 <div class="wrapper">
     <div class="widget--tab" data-id="widget--tab">
         <div class="map__holder">
-            <object id="object-map" data="./src/svg/map.svg" type="image/svg+xml" width="100%"></object>
+            <object id="object-map" data="svg/map.svg" type="image/svg+xml" width="100%"></object>
         </div>
 
         <div class="tab__titles" data-id="tab__titles">
