Приступил к вёрстке остального контента, добавлены заголовки

--- a/src/index.html
+++ b/src/index.html
@@ -15,11 +15,12 @@
 <main class="main">
 
 <div class="wrapper">
-    <div class="widget--tab" data-id="widget--tab">
+    <h1 class="page-title">Ключевые показатели группы</h1>
+    <h3 class="page-subtitle">Зарубежные активы</h3>
+    <div class="tab" data-id="tab">
         <div class="map__holder">
             <object id="object-map" data="svg/map.svg" type="image/svg+xml" width="100%"></object>
         </div>
-
         <div class="tab__titles" data-id="tab__titles">
             <span class="tab-el__title" data-type="tab" data-id="tab_1">Грузия</span>
             <span class="tab-el__title" data-type="tab" data-id="tab_2">Молдавия</span>
