Добавлено подобие API

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 <main class="main">
 
 <div class="wrapper">
-    <h1 class="page-title">Ключевые показатели группы</h1>
+    <!-- <h1 class="page-title">Ключевые показатели группы</h1> -->
     <h3 class="page-subtitle">Зарубежные активы</h3>
     <div class="tab" data-id="tab">
         <div class="map__holder">
@@ -28,7 +28,7 @@
             <span class="tab-el__title" data-type="tab" data-id="tab_4">Казахстан</span>
             <span class="tab-el__title tab-el__title--active" data-type="tab--active" data-id="tab_5">Россия</span>
         </div>
-        <div class="tab__content__holder">
+        <div class="tab__content-holder">
             <!-- Вкладка 1 -->
             <div class="tab-el__content" data-type="tab__content" data-for="tab_1">
                 <span class="content__title">Заголовок во вкладке таба 1</span>
