Добавлен плагин инлайна свг. Скорректированы версии webpack, и плагинов для совместимости. Убран package-lock для перехода на yarn

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 <header class="header">
     <span class="header__title">хэдер</span>
 </header>
-    
+
 
 <main class="main">
 
@@ -19,7 +19,8 @@
     <h3 class="page-subtitle">Зарубежные активы</h3>
     <div class="tab" data-id="tab">
         <div class="map__holder">
-            <object id="object-map" data="svg/map.svg" type="image/svg+xml" width="100%"></object>
+            <!-- <object id="object-map" data="svg/map.svg" type="image/svg+xml" width="100%"></object> -->
+            <img inline src="svg/map.svg" alt="">
         </div>
         <div class="tab__titles" data-id="tab__titles">
             <span class="tab-el__title" data-type="tab" data-id="tab_1">Грузия</span>
@@ -54,7 +55,7 @@
             <!-- Вкладка 5 -->
             <div class="tab-el__content tab-el__content--active" data-type="tab__content--active" data-for="tab_5">
                 <span class="content__title">Заголовок во вкладке таба 5</span>
-                <span class="content__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, voluptatibus doloremque! Qui delectus non dicta, error quia nulla vel voluptatibus impedit recusandae laudantium, est vitae sed alias autem quis id.</span> 
+                <span class="content__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, voluptatibus doloremque! Qui delectus non dicta, error quia nulla vel voluptatibus impedit recusandae laudantium, est vitae sed alias autem quis id.</span>
             </div>
         </div>
     </div>
